--- a/projects/stepper/src/lib/styles/scss/components/_progress-count.scss
+++ b/projects/stepper/src/lib/styles/scss/components/_progress-count.scss
@@ -34,6 +34,9 @@
     }
 }
 
+
+
+
 //count-widget css
 .count-button {
     height: 40px;
@@ -112,10 +115,44 @@
             width: 100%;
         }
     }
-
-
 }
 
+//vertical orientation css
+.vertical {
+    .progress-item {
+        &:after {
+            content: '';
+            left: 20%;
+            top: 0%;
+            width: 4px;
+            height: 100%;
+            background-color: var(--background);
+            z-index: 9;
+        }
+
+        &::before {
+            position: absolute;
+            content: '';
+            left: 20%;
+            top: 0%;
+            width: 4px;
+            height: 0%;
+            background-color: var(--completedBg);
+            transition: all 200ms ease-out;
+            z-index: 99;
+        }
+
+        .step-details {
+            padding-top: 10px;
+        }
+
+        &.completed {
+            &::before {
+                height: 100%;
+            }
+        }
+    }
+}
 
 //progress bar css
 .step-progress-bar {
@@ -137,25 +174,36 @@
 }
 
 //responisive css for steps widget
+@media screen and (max-width: 768px) {
+
+    .vertical {
+        .progress-item {
+
+            &:after,
+            &:before {
+                left: 40%;
+            }
+
+        }
+    }
+}
+
+//responisive css for steps widget
 @media screen and (max-width: 576px) {
     .count-button {
         height: 30px;
         width: 30px;
     }
 
-    .nav-items {
-        width: calc((100% - 30px)/5);
-    }
+    .vertical {
+        .progress-item {
 
-    .counts.vertical-orientation {
-
-        .nav-items {
-            height: calc((100% - 30px)/5);
-        }
-
-        .step-progress-bar {
-            left: 13px;
+            &:after,
+            &:before {
+                left: 13px;
+            }
         }
     }
+
 
 }
