--- a/projects/stepper/src/lib/styles/scss/components/_progress-count.scss
+++ b/projects/stepper/src/lib/styles/scss/components/_progress-count.scss
@@ -1,40 +1,7 @@
 .step-counts {
     position: relative;
     z-index: 11;
-
-    &.vertical-orientation {
-
-        .nav-items {
-            height: calc((100% - 40px)/5);
-            width: initial;
-
-            &:last-child {
-                height: initial;
-            }
-        }
-
-        .step-title {
-            // writing-mode: vertical-rl;
-            // text-orientation: mixed;
-            margin-top: 10px;
-            // transform: scale(-1);
-        }
-
-        .step-progress-bar {
-            left: 17px;
-            top: 0;
-            width: 5px !important;
-            height: 100%;
-
-            .progress-bar-active {
-                width: 5px !important;
-            }
-
-        }
-    }
 }
-
-
 
 
 //count-widget css
@@ -43,7 +10,6 @@
     width: 40px;
     position: relative;
     z-index: 999;
-    // background-color: $light;
     background-color: var(--background);
     font-size: 16px;
     font-weight: bold;
@@ -80,8 +46,6 @@
 
     }
 
-    ;
-
     &:last-child {
         width: initial !important;
         justify-content: flex-end;
@@ -95,13 +59,11 @@
 
         .count-button,
         .step-details {
-            // color: $success;
             color: var(--active);
         }
 
         .count-button {
             background: var(--activeBg);
-            // background: $light;
         }
     }
 
@@ -122,7 +84,7 @@
     .progress-item {
         &:after {
             content: '';
-            left: 20%;
+            left: 20px;
             top: 0%;
             width: 4px;
             height: 100%;
@@ -133,7 +95,7 @@
         &::before {
             position: absolute;
             content: '';
-            left: 20%;
+            left: 20px;
             top: 0%;
             width: 4px;
             height: 0%;
@@ -141,14 +103,25 @@
             transition: all 200ms ease-out;
             z-index: 99;
         }
-
-        .step-details {
-            padding-top: 10px;
+        
+        .step-title {
+            max-width: 100px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-top: 7px;
         }
-
+        
         &.completed {
             &::before {
                 height: 100%;
+            }
+        }
+
+        &:last-child {
+            justify-content: flex-start;
+
+            &::after {
+                height: 0;
             }
         }
     }
@@ -157,7 +130,6 @@
 //progress bar css
 .step-progress-bar {
     background: var(--background);
-    // background: $light;
     position: absolute;
     top: 50%;
     z-index: -1;
@@ -168,7 +140,6 @@
         height: 5px;
         width: 0%;
         background-color: var(--completedBg);
-        // background-color: $secondary;
     }
 
 }
@@ -181,7 +152,7 @@
 
             &:after,
             &:before {
-                left: 40%;
+                left: 40px;
             }
 
         }
